[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120

[tool:pytest]
addopts =
    --cov-report=term-missing
    --cov=pathtools
    --doctest-modules
    --showlocals
    --strict
    --failed-first
    --no-print-logs
    -r fE
    -v
    pathtools

[upload_sphinx]
# Requires sphinx-pypi-upload to work.
upload-dir = docs/build/html
